syntax = "proto3";
package com.cart.grpc;

import "google/protobuf/empty.proto";

service CartService {
  rpc AddToCart (CartItemRequest) returns (google.protobuf.Empty);
  rpc RemoveFromCart (CartItemRequest) returns (google.protobuf.Empty);
  rpc GetCart (UserQuery) returns (Cart);
  rpc ClearCart (UserQuery) returns (google.protobuf.Empty);
}

message UserQuery {
  string user_id = 1;
}

message CartItemRequest {
  string user_id = 1;
  string product_name = 2;
  int32 quantity = 3;
}

message CartItem {
  string product_name = 1;
  float price = 2;
  int32 quantity = 3;
}

message Cart {
  string user_id = 1;
  repeated CartItem items = 2;
}
